# CAWN-Serbian-96M

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  test_text_hard.txt  test_text_priroda.txt  test_text_zabava.txt
.github/workflows/: ci.yml
evaluation_dataset/: test_text_politika.txt  test_text_tesla.txt
